--- a/UserGuide.wiki
+++ b/UserGuide.wiki
@@ -1,15 +1,19 @@
 #summary Your friendly guide to installing and using Minify.
 #labels Phase-Deploy,Featured
 
-= Installing Minify 2.1 =
+= Installing Minify for the first time =
 
-[http://code.google.com/p/minify/downloads/list Download] Minify 2.1.0 and unzip the files to a new "minify" directory.
+[http://code.google.com/p/minify/downloads/list Download] the latest Minify and unzip the files to a new "minify" directory.
 
 Copy the "min" folder directly into your DOCUMENT_ROOT.
 
 Done!
 
 (Optional) See TestingMinify if you'd like to run unit tests.
+
+== Upgrading Minify from 2.1.0 to 2.1.1 ==
+
+See the [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/UPGRADING.txt Upgrade Guide]
 
 = Usage =
 
@@ -19,7 +23,7 @@ The Minify URI Builder will help you create URIs you can use to minify existing 
 
 = Configuration =
 
-Most configuration options are located in [http://code.google.com/p/minify/source/browse/tags/release_2.1.0/min/config.php min/config.php]. To set up groups of files to minify, this can specified in [http://code.google.com/p/minify/source/browse/tags/release_2.1.0/min/groupsConfig.php min/groupsConfig.php] (The builder application will help with this).
+Most configuration options are located in [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/config.php min/config.php]. To set up groups of files to minify, this can specified in [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/groupsConfig.php min/groupsConfig.php] (The builder application will help with this).
 
 == Previous Releases ==
 
