--- a/ComponentClasses.wiki
+++ b/ComponentClasses.wiki
@@ -4,9 +4,13 @@
 =PHP5 Component Classes=
 
 || *Class* || *Functionality* ||
+|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify.php Minify] || Combine, process, and serve pieces of content (usually CSS/JS files). Almost all behavior is configurable including request handling (via [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/Controller/ controllers]), HTTP headers & encoding, caching ([http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/Cache/ file/APC/memcached]), and compression functions (by default, the classes below) ||
 || [http://code.google.com/p/minify/source/browse/trunk/min/lib/JSMin.php JSMin] || A port of [http://www.crockford.com/javascript/jsmin.html jsmin.c], extended to preserve some multi-line comments and IE conditional comments (since these occasionally have their [http://dean.edwards.name/weblog/2007/03/sniff/ uses]). ||
-|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/CSS.php Minify_CSS] || Agressively minifies CSS. Includes a thorough [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/ test suite] to make sure most common [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/hacks.css hacks] and [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/unusual_strings.css unusual syntaxes] are preserved. ||
+|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/CSS.php Minify_CSS] || Uses the two classes below to minify CSS and optionally rewrite URIs. ||
+|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/CSS/Compressor.php Minify_CSS_Compressor] || Agressively minifies CSS. Includes a thorough [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/ test suite] to make sure most common [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/hacks.css hacks] and [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css/unusual_strings.css unusual syntaxes] are preserved. ||
+|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/CSS/UriRewriter.php Minify_CSS_UriRewriter] || In CSS files, rewrites file-relative URIs as root-relative. With [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/css_uriRewriter/ test suite] ||
 || [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/HTML.php Minify_HTML] || Agressively minifies (X)HTML markup. Preserves TEXTAREA/PRE contents, can invoke minifiers on STYLE and SCRIPT blocks, and wraps content in CDATA blocks in XHTML when necessary. Includes [http://code.google.com/p/minify/source/browse/trunk/min_unit_tests/_test_files/html/ test suite]. ||
 || [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/YUICompressor.php Minify_YUICompressor] || (Experimental) PHP wrapper for invoking the Java-based [http://developer.yahoo.com/yui/compressor/ YUI Compressor] ||
+|| [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/ImportProcessor.php Minify_ImportProcessor] || Linearize a CSS/JS file by including content specified by CSS import declarations. In CSS files, relative URIs are fixed. This has a test suite but should be considered "experimental". ||
 || [http://code.google.com/p/minify/source/browse/trunk/min/lib/HTTP/Encoder.php HTTP_Encoder] || Applies HTTP encoding to content. Can serve content with conditional encoding based on Accept-Encoding headers (parsed according to [http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html HTTP spec]) and known browser bugs. ||
 || [http://code.google.com/p/minify/source/browse/trunk/min/lib/HTTP/ConditionalGet.php HTTP_ConditionalGet] || Implements HTTP conditional GETs via a simple, flexible API. ||
