--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -1,20 +1,27 @@
 #summary Common Problems using Minify
 #labels Featured,Phase-Support
 
+== @imports can appear in invalid locations in combined CSS files ==
+
+If you combine CSS files, @import declarations can appear after CSS rules, invalidating the stylesheet. As of version 2.1.2, if Minify detects this, it will prepend a warning to the output CSS file. To resolve this, you can either move your @import statements within your files, or enable the option 'bubbleCssImports'.
+
+== An incorrect DOCUMENT_ROOT can cause problems ==
+
+If `$_SERVER['DOCUMENT_ROOT']` is invalid, e.g. contains a trailing slash "/", or points to a path that doesn't exist, Minify may not work correctly. If you cannot fix this in httpd.conf, etc., version 2.1.2 added a configuration option to specify the document root.
+
 == Debug mode can cause a Javascript error ==
 
-Debug mode uses the [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/Lines.php Minify_Lines] class to add line numbers in comments. Unfortunately, if the source file has a string or regex containing (what looks like) a C-style comment token, the algorithm is confused and the injected comments cause a syntax error. If you prefer not to alter your source file, [http://code.google.com/p/minify/issues/detail?id=55#c7 issue 55] has a few simple workarounds until this is patched.
+This issue was resolved in version 2.1.2.
+
+Debug mode adds line numbers in comments. Unfortunately, in versions <= 2.1.1, if the source file had a string or regex containing (what looks like) a C-style comment token, the algorithm was confused and the injected comments caused a syntax error.
 
 == Minification can cause a Javascript error ==
 
-In rare instances the [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/JSMin.php#14 JSMin] algorithm can be confused by regexes in certain contexts and throw an exception. The current workaround is to simply wrap the expression in parenthesis. E.g.
+This issue was resolved in version 2.1.2.
+
+In rare instances the [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/JSMin.php#14 JSMin] algorithm in versions <= 2.1.1 could be confused by regexes in certain contexts and throw an exception. The workaround was to simply wrap the expression in parenthesis. E.g.
 {{{
-return /'/;   // JSMin throws error
+return /'/;   // JSMin in 2.1.1 throws error
 
 return (/'/); // no error
 }}}
-[http://code.google.com/p/minify/source/browse/trunk/min/lib/MyMin.php Andrea Giammarchi's extension of JSMin] resolves this issue, and we're working to merge that fix into our JSMin.
-
-== Incorrect DOCUMENT_ROOT settings ==
-
-If `$_SERVER['DOCUMENT_ROOT']` is invalid, e.g. contains a trailing slash "/", or points to a path that doesn't exist, Minify will not work correctly. If you cannot fix this in httpd.conf, etc., [http://code.google.com/p/minify/issues/detail?id=68#c6 Issue 68] has a simple workaround that may appear in a future Minify release.
