--- a/UserGuide.wiki
+++ b/UserGuide.wiki
@@ -23,7 +23,7 @@ The Minify URI Builder will help you create URIs you can use to minify existing 
 
 = Configuration =
 
-Most configuration options are located in [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/config.php min/config.php]. To set up groups of files to minify, this can specified in [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/groupsConfig.php min/groupsConfig.php] (The builder application will help with this).
+Most configuration options are located in [http://code.google.com/p/minify/source/browse/trunk/min/config.php min/config.php]. To set up groups of files to minify, this can specified in [http://code.google.com/p/minify/source/browse/trunk/min/groupsConfig.php min/groupsConfig.php] (The builder application will help with this).
 
 = Customized Sources / Options for Specific Files =
 
@@ -34,29 +34,22 @@ In [http://code.google.com/p/minify/source/browse/trunk/min/groupsConfig.php gro
 {{{
 // in groupsConfig.php:
 
-function _identity($a) {return $a;}
-function _trim($a) {return trim($a);}
+function myMinifier($a) {return trim($a);}
 
 return array(
     'js' => array(
-        // do not alter this file
         new Minify_Source(array(
-            'filepath' => '//js/jquery.min.js', // already minified
-            'minifier' => '_identity'
+            'filepath' => '//js/file1.js',
+            'minifier' => ''  // don't minify this
         )),
-        // only trim this file
         new Minify_Source(array(
-            'filepath' => '//js/file1.js', // already minified
-            'minifier' => '_trim'
+            'filepath' => '//js/file2.js',
+            'minifier' => 'myMinifier' // run myMinifier() on content
         )),
-        '//js/site.js'
+        '//js/site.js' // default JSMin minification
     )
 );
 }}}
-Note: the need for the identity function is due to a bug in version 2.1.1. In the future, you'll be able to use `"minifier" => ''`
-
-The user function `_trim` is needed because Minify sends a second argument (the empty minifierOptions array) to the minifier function. The native `trim` chokes on the second argument, but user functions just ignore unspecified args.
-
 = Previous Releases =
 
 The following info applies only to the Minify 2.0 releases. Most users will not need to do any of this as of version 2.1.
