--- a/History.wiki
+++ b/History.wiki
@@ -1,7 +1,26 @@
 #summary Minify release history.
 #labels Featured
 
-== [http://code.google.com/p/minify/downloads/list Version 2.1.0] (2008-09-18) ==
+== [http://code.google.com/p/minify/downloads/list Version 2.1.2] (2009-03-04) ==
+    * Javascript fixes
+      * Debug mode no longer confused by `*/*` in strings/!RegExps (jQuery)
+      * quote characters inside !RegExp literals no longer cause exception
+      * files ending in single-line comments no longer cause code loss
+    * CSS: data: URLs no longer mangled
+    * Optional error logging to Firefox's FirePHP extension
+    * Unit tests to check for common DOCUMENT_ROOT problems
+      * DOCUMENT_ROOT no longer overwritten on IIS servers
+    * Builder app doesn't fail on systems without gzdeflate()
+    * APC caching class included
+
+== Version 2.1.1 (2008-10-19) ==
+    * Bug fix release
+    * Detection and workarounds for zlib.output_compression and non-PHP encoding modules
+    * Zlib not required (mod_rewrite, et.al., can still be used for encoding)
+    * HTML : More IE conditional comments preserved
+    * Minify_groupUri() utility fixed
+
+== Version 2.1.0 (2008-09-18) ==
     * "min" default application for quick deployment
     * Minify URI Builder app & bookmarklet for quickly creating minify URIs
     * Relative URIs in CSS file are fixed automatically by default
