--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -1,7 +1,7 @@
 #summary Common Problems using Minify
 #labels Featured,Phase-Support
 
-== Dealing with Javascript error(s) ==
+== Dealing with Javascript errors ==
 
 Minify currently uses JSMin to remove whitespace from Javascript. Although [http://code.google.com/p/minify/source/browse/trunk/min/lib/JSMin.php Minify's JSMin] has been patched beyond Douglas Crockford's [http://www.crockford.com/javascript/jsmin.html original], errors can still be introduced, e.g. in scripts that rely on [http://www.robertnyman.com/2008/10/16/beware-of-javascript-semicolon-insertion/ semicolon insertion] or other unusual syntax. To avoid problems, in general:
 
