--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -1,6 +1,8 @@
 #summary Common Problems using Minify
 #labels Featured,Phase-Support
 
+If this page doesn't help, please post a question on our [http://groups.google.com/group/minify Google group].
+
 == Dealing with Javascript errors ==
 
 Minify currently uses JSMin to remove whitespace from Javascript. Although [http://code.google.com/p/minify/source/browse/trunk/min/lib/JSMin.php Minify's JSMin] has been patched beyond Douglas Crockford's [http://www.crockford.com/javascript/jsmin.html original], errors can still be introduced, e.g. in scripts that rely on [http://www.robertnyman.com/2008/10/16/beware-of-javascript-semicolon-insertion/ semicolon insertion] or other unusual syntax. To avoid problems, in general:
