--- a/UserGuide.wiki
+++ b/UserGuide.wiki
@@ -1,6 +1,8 @@
 #summary Your friendly guide to installing and using Minify.
 #labels Phase-Deploy,Featured
 
+If this page doesn't help, please post a question on our [http://groups.google.com/group/minify Google group].
+
 = Installing Minify for the first time =
 
 [http://code.google.com/p/minify/downloads/list Download] the latest Minify and unzip the files to a new "minify" directory.
