--- a/History.wiki
+++ b/History.wiki
@@ -1,7 +1,17 @@
 #summary Minify release history.
 #labels Featured
 
-== [http://code.google.com/p/minify/downloads/list Version 2.1.2] (2009-03-04) ==
+== [http://code.google.com/p/minify/downloads/list Version 2.1.3] (2009-06-30) ==
+    * HTTP fixes
+      * ETag generation now valid ([https://issues.apache.org/bugzilla/show_bug.cgi?id=39727 must be unique when gzipped])
+      * Vary header always sent when Accept-Encoding is sniffed
+      * Cache-Control no longer has "must-revalidate" due to [http://mrclay.org/index.php/2009/02/24/safari-4-beta-cache-controlmust-revalidate-bug/ webkit bug]
+      * Dropped deflate encoding. Browser and proxy support [http://stackoverflow.com/questions/883841/ could be buggy].
+    * File cache now works w/o setting `$min_cachePath`
+    * Allow setting contentType in Minify_Source objects
+    * No more 5.3 deprecation warnings: `split()` removed
+
+== Version 2.1.2 (2009-03-04) ==
     * Javascript fixes
       * Debug mode no longer confused by `*/*` in strings/!RegExps (jQuery)
       * quote characters inside !RegExp literals no longer cause exception
