--- a/Security.wiki
+++ b/Security.wiki
@@ -15,4 +15,4 @@ Then, a few more steps just to be paranoid:
 
   * If a base was given by `$_GET['b']`, [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/Minify/Controller/MinApp.php#84 it can't have ".."].
   * `$_GET['f']` [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/Minify/Controller/MinApp.php#64 must not contain "//", "\", or "./"].
-  * There can [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/Minify/Controller/MinApp.php#77 no duplicates] and only a [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/config.php#73 limited number of files] can be specified.
+  * There can be [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/lib/Minify/Controller/MinApp.php#77 no duplicates] and only a [http://code.google.com/p/minify/source/browse/tags/release_2.1.1/min/config.php#73 limited number of files] can be specified.
