--- a/History.wiki
+++ b/History.wiki
@@ -2,14 +2,19 @@
 #labels Featured
 
 == [http://code.google.com/p/minify/downloads/list Version 2.1.3] (2009-06-30) ==
+    * CSS fixes
+      * A few URI rewriting bugs fixed
+      * comment/whitespace removal no longer breaks some values
+      * IE6 [http://www.crankygeek.com/ie6pebug/ pseudo-element selector bug] no longer triggered
     * HTTP fixes
+      * Proper Expires handling in webkit (dropped "must-revalidate", which triggered a [http://mrclay.org/index.php/2009/02/24/safari-4-beta-cache-controlmust-revalidate-bug/ webkit bug])
       * ETag generation now valid ([https://issues.apache.org/bugzilla/show_bug.cgi?id=39727 must be unique when gzipped])
       * Vary header always sent when Accept-Encoding is sniffed
-      * Cache-Control no longer has "must-revalidate" due to [http://mrclay.org/index.php/2009/02/24/safari-4-beta-cache-controlmust-revalidate-bug/ webkit bug]
-      * Dropped deflate encoding. Browser and proxy support [http://stackoverflow.com/questions/883841/ could be buggy].
+      * Dropped deflate encoding, since browser and proxy support [http://stackoverflow.com/questions/883841/ could be buggy].
     * File cache now works w/o setting `$min_cachePath`
-    * Allow setting contentType in Minify_Source objects
     * No more 5.3 deprecation warnings: `split()` removed
+    * API: Can set contentType !Minify_Source objects (fixes an annoying [http://groups.google.com/group/minify/msg/8446d32ee99a4961 caveat])
+    * [http://code.google.com/p/minify/issues/list?can=1&q=label%3ARelease-2.1.2%20status%3AVerified Resolved Issue list]
 
 == Version 2.1.2 (2009-03-04) ==
     * Javascript fixes
