--- a/CommonProblems.wiki
+++ b/CommonProblems.wiki
@@ -10,7 +10,7 @@ Minify currently uses JSMin to remove whitespace from Javascript. Although [http
   * When available, use pre-compressed versions of Javascript libraries (generally JSMin will not break code output by the more advanced Rhino-based compressors like [http://developer.yahoo.com/yui/compressor/ YUI Compressor]), or use a [http://code.google.com/apis/ajaxlibs/ Google-hosted version] and reserve Minify for serving plugins and user code.
   * Try [Debugging debug mode] to check your files for errors. Debug mode _can_ introduce its own errors, but is generally reliable. The comment at the beginning of the line of the error will tell you the line number in the original source file.
   * In a custom group, you can specify a file to have [http://code.google.com/p/minify/wiki/UserGuide#Custom_functions_for_files no minifier] (HTTP compression will still be used).
-  * If you have Java on your web host, you can use the [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/YUICompressor.php wrapper for YUI Compressor] instead of JSMin. Ask the mailing list for instructions.
+  * If you have Java on your web host, you can use the [http://code.google.com/p/minify/source/browse/trunk/min/lib/Minify/YUICompressor.php wrapper for YUI Compressor] instead of JSMin. [http://groups.google.com/group/minify/browse_thread/thread/f12f25f27e1256fe This thread] shows how a user has done this.
 
 === Scriptaculous ===
 
@@ -20,6 +20,14 @@ Scriptaculous 1.8.2 (and probably all 1.x) has an [http://github.com/madrobby/sc
 <script src="/min/f=scriptaculous/lib/prototype.js" type="text/javascript"></script>
 <script src="/min/b=scriptaculous/src&amp;f=effects.js,dragdrop.js" type="text/javascript"></script>
 }}}
+
+== Cache files won't update ==
+
+If you upload files using [http://groups.google.com/group/coda-users/browse_thread/thread/572d2dc315ec02e7/ Coda or Transmit] or from a Windows PC to a non-Windows server, your new files may end up with the wrong timestamp on the server, confusing the cache system.
+
+Setting the [http://code.google.com/p/minify/source/browse/tags/release_2.1.3/min/config.php#129 $min_uploaderHoursBehind option] in `config.php` can compensate for this.
+
+WinSCP has [http://winscp.net/eng/docs/ui_login_environment#daylight_saving_time Daylight Saving Time option] that can prevent this issue. 
 
 == Character Encodings ==
 
